--- a/insert.html
+++ b/insert.html
@@ -64,7 +64,17 @@
    		 </div>
     </div>
 
- 	<div id="myvideotab" class="tab-pane"></div>
+ 	<div id="myvideotab" class="tab-pane"> <table>
+        <tr>
+          <th class="video-name active">NAME</th>
+          <th class="video-date">DATE</th>
+          <th class="video-owner">OWNER</th>
+          <th class="video-star"><span class="head-star"></span></th>
+        </tr>
+
+      
+
+      </table></div>
  	<div id="favoritetab" class="tab-pane"></div>
  </div>
   </div>
