--- a/insert.html
+++ b/insert.html
@@ -45,7 +45,7 @@
     </div>
     <div class="tab-content">
     <div id="allvideotab" class="tab-pane active" style="width:560px;height: 372px;background: #424242">
-      <div id="videos">
+      <div class="videos">
       <table>
         <tr>
           <th class="video-name active">NAME</th>
@@ -54,7 +54,7 @@
           <th class="video-star"><span class="head-star"></span></th>
         </tr>
 
-      
+
 
       </table>
     </div>
@@ -65,6 +65,8 @@
     </div>
 
  	<div id="myvideotab" class="tab-pane"> <table>
+        <div class="videos">
+      <table>
         <tr>
           <th class="video-name active">NAME</th>
           <th class="video-date">DATE</th>
@@ -72,9 +74,16 @@
           <th class="video-star"><span class="head-star"></span></th>
         </tr>
 
-      
 
-      </table></div>
+
+      </table>
+    </div>
+         <div class="button-group">
+      <span class="button insert-video disable"><span>Insert Video</span><span></span></span>
+      <span class="button insert-cancel"><span>Cancel</span><span></span></span>
+       </div>
+    </div>
+    </div>
  	<div id="favoritetab" class="tab-pane"></div>
  </div>
   </div>
