--- a/insert.html
+++ b/insert.html
@@ -130,7 +130,7 @@
           </td>
           <td>
             <div class="col4">
-              <span class="star active">
+              <span class="star">
 
               </span>
             </div>
