--- a/insert.html
+++ b/insert.html
@@ -84,7 +84,26 @@
        </div>
     </div>
     </div>
- 	<div id="favoritetab" class="tab-pane"></div>
+ 	<div id="favoritetab" class="tab-pane">
+    <div class="videos">
+      <table>
+        <tr>
+          <th class="video-name active">NAME</th>
+          <th class="video-date">DATE</th>
+          <th class="video-owner">OWNER</th>
+          <th class="video-star"><span class="head-star"></span></th>
+        </tr>
+
+
+
+      </table>
+    </div>
+         <div class="button-group">
+      <span class="button insert-video disable"><span>Insert Video</span><span></span></span>
+      <span class="button insert-cancel"><span>Cancel</span><span></span></span>
+       </div>
+    
+  </div>
  </div>
   </div>
     <script id="videoTemplate" type="text/x-mustache-template">
