--- a/insert.html
+++ b/insert.html
@@ -64,22 +64,7 @@
    		 </div>
     </div>
 
- 	<div id="myvideotab" class="tab-pane"> <table>
-        <div class="videos">
-      <table>
-        <tr>
-          <th class="video-name active">NAME</th>
-          <th class="video-date">DATE</th>
-          <th class="video-owner">OWNER</th>
-          <th class="video-star"><span class="head-star"></span></th>
-        </tr>
-
-
-
-      </table>
-    </div>
-
-    </div>
+ 	<div id="myvideotab" class="tab-pane">
     </div>
  	<div id="favoritetab" class="tab-pane">
     <div class="videos">
